# vabi

./: .envrc  .pre-commit-config.yaml  README.md  pyproject.toml
babi/: __main__.py  buf.py  color.py  color_kd.py  fdict.py  file.py  highlight.py  history.py  horizontal_scrolling.py  linting.py  log_util.py  main.py  perf.py  prompt.py  reg.py  screen.py  status.py  textmate_demo.py  theme.py  user_data.py
babi/hl/: lint_errors.py  syntax.py
babi/linters/: flake8.py  pre_commit.py
babi/resources/: default_theme.py
testing/: runner.py
tests/: buf_test.py  color_manager_test.py  color_test.py  conftest.py  fdict_test.py  file_test.py  highlight_test.py  linting_test.py  main_test.py  proc_test.py  reg_test.py  textmate_demo_test.py  theme_test.py  user_data_test.py
tests/features/: command_mode_test.py  comment_test.py  conftest.py  current_position_test.py  cut_uncut_test.py  expandtabs_test.py  go_to_line_test.py  indent_test.py  initial_position_test.py  key_debug_test.py  linting_test.py  movement_test.py  multiple_files_test.py  open_test.py  perf_log_test.py  quit_all_test.py  reload_test.py  replace_test.py  resize_test.py  retheme_test.py  save_test.py  search_test.py  sort_test.py  status_test.py  stdin_test.py  suspend_test.py  syntax_highlight_test.py  tabsize_test.py  text_editing_test.py  trailing_whitespace_test.py  undo_redo_test.py
tests/hl/: syntax_test.py
tests/linters/: flake8_test.py  pre_commit_test.py
