[project]
name = "babi"
version = "1.6.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "babi-grammars>=0.0.72",
    "identify>=2.6.19",
    "onigurumacffi>=0.0.18",
]

[project.scripts]
babi = "babi.main:main"

[dependency-groups]
dev = [
    "covdefaults>=2.3.0",
    "coverage>=7.13.5",
    "hecate",
    "pytest>=9.0.3",
    "remote-pdb>=2.1.0",
]

[tool.uv.sources]
hecate = { git = "https://github.com/asottile/hecate", rev = "875567f" }
